--- a/scss/main/main.css
+++ b/scss/main/main.css
@@ -7,6 +7,10 @@
 }
 
 body, html {
+  min-height: 100%;
+  min-width: 100%;
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
 }
 
@@ -536,7 +540,6 @@ footer {
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
-  font-family: 'Acme', sans-serif;
   font-size: calc(8px + 1vw);
   letter-spacing: 1px;
   height: auto;
