--- a/scss/main/main.scss
+++ b/scss/main/main.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Pacifico');
 @import url('https://fonts.googleapis.com/css?family=Acme');
 
+@import url("../../animate.css");
+
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css);
 
 @mixin titles__white-font {
